Switched the WebDavClient from java.net.HttpURLConnection to java.net.http.HttpClient